--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,18 @@ server:
 spring:
   application:
     name: service-ribbon
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/student?useUnicode=true&characterEncoding=utf8
+  master:
+    datasource:
+      driver-class-name: com.mysql.jdbc.Driver
+      username: root
+      password: root
+      url: jdbc:mysql://localhost:3306/student?useUnicode=true&characterEncoding=utf8
+  slave:
+    datasource:
+      driver-class-name: com.mysql.jdbc.Driver
+      username: root
+      password: root
+      url: jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=utf8
   redis:
     host: 192.168.142.128
     port: 6379
