--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,16 @@
             <version>1.4.7.RELEASE</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.junit</groupId>
+            <artifactId>junit-commons</artifactId>
+            <version>5.0.0-ALPHA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
 
     </dependencies>
 
