[修改] 统一返回输出格式

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,10 @@
             <version>1.6</version>
         </dependency>
         <!--swagger2 end-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
