[修改]  添加日志输出文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,11 @@ spring:
 pagehelper:
   dialect: com.github.pagehelper.dialect.helper.MySqlDialect
 
+logging:
+  level: debug
+  path: logs/
+  file: admin.log
+
 
 
 
